tests/negative/test_decl_bad_type_cn.orb
fnc main() {
    sym (x:i32 100);
    sym (a:(i32 cn*) &x);
    sym (b:(i32*) a);
};